--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^0.7.7",
     "pure-render-decorator": "^0.2.0",
+    "rainbowvis.js": "^1.0.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-leaflet": "^0.10.2",
