--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^0.14.7",
     "react-leaflet": "^0.10.2",
     "react-redux": "^4.4.0",
+    "react-router": "^2.0.1",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^1.0.3"
