--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.6.1",
     "bootstrap": "^3.3.6",
+    "font-awesome": "^4.5.0",
     "immutable": "^3.7.6",
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^0.7.7",
