--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-router": "^2.0.1",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^1.0.3"
+    "redux-thunk": "^1.0.3",
+    "screenfull": "^3.0.0"
   }
 }
