--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-transform-runtime": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "brfs": "^1.4.3",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
@@ -32,6 +33,7 @@
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "style-loader": "^0.13.0",
+    "transform-loader": "^0.2.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
@@ -45,6 +47,7 @@
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^0.7.7",
     "leaflet-plugins": "^1.5.2",
+    "pixi.js": "^3.0.10",
     "pure-render-decorator": "^0.2.0",
     "rainbowvis.js": "^1.0.1",
     "rc-slider": "^3.5.1",
