--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "redux-thunk": "^1.0.3",
     "screenfull": "^3.0.0",
     "shutterbug": "^0.6.0",
-    "three": "^0.75.0"
+    "three": "^0.75.0",
+    "tween.js": "^16.3.4"
   }
 }
