--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-polyfill": "^6.6.1",
     "bootstrap": "^3.3.6",
     "font-awesome": "^4.5.0",
+    "iframe-phone": "^1.1.3",
     "immutable": "^3.7.6",
     "jquery": "^2.2.2",
     "leaflet": "^0.7.7",
