--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-leaflet": "^0.10.2",
     "react-modal": "^1.4.0",
     "react-redux": "^4.4.0",
+    "react-router": "^3.8.3",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^1.0.3",
