plates-layer.js now has options for KML and json files. New node package: leaflet-ajax Current map data has no visible style

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "immutable": "^3.7.6",
     "jquery": "^2.2.2",
     "leaflet": "^0.7.7",
+    "leaflet-ajax": "^2.1.0",
     "leaflet-plugins": "^1.5.2",
     "pure-render-decorator": "^1.1.0",
     "rainbowvis.js": "^1.0.1",
