--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-plugin-transform-runtime": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-2": "^6.24.1",
     "brfs": "^1.4.3",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
@@ -58,7 +59,7 @@
     "leaflet": "^0.7.7",
     "leaflet-plugins": "^1.5.2",
     "rainbowvis.js": "^1.0.1",
-    "rc-slider": "^3.5.1",
+    "rc-slider": "^8.3.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-leaflet": "^0.10.2",
