--- a/package.json
+++ b/package.json
@@ -56,13 +56,14 @@
     "iframe-phone": "^1.1.3",
     "immutable": "^3.7.6",
     "jquery": "^2.2.2",
-    "leaflet": "^0.7.7",
-    "leaflet-plugins": "^1.5.2",
+    "leaflet": "^1.2.0",
+    "leaflet-plugins": "^3.0.1",
+    "prop-types": "^15.5.10",
     "rainbowvis.js": "^1.0.1",
     "rc-slider": "^8.3.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-leaflet": "^0.10.2",
+    "react-leaflet": "^1.6.6",
     "react-modal": "^1.4.0",
     "react-redux": "^5.0.6",
     "react-router": "^3.0.2",
