--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "jquery": "^2.2.2",
     "leaflet": "^1.2.0",
     "leaflet-plugins": "^3.0.1",
+    "leaflet-rotatedmarker": "^0.2.0",
     "prop-types": "^15.5.10",
     "rainbowvis.js": "^1.0.1",
     "rc-slider": "^8.3.1",
