Upgrade Shutterbug to ver 1.0.0-pre.4
[#150887551]

--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "reselect": "^3.0.1",
     "rollbar-browser": "^1.9.4",
     "screenfull": "^3.0.0",
-    "shutterbug": "^0.6.0",
+    "shutterbug": "^1.0.0-pre.4",
     "three": "^0.87.1",
     "tween.js": "^16.3.4"
   }
