--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "rc-slider": "^8.3.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-leaflet": "^1.6.6",
+    "react-leaflet": "^1.7.7",
     "react-modal": "^1.4.0",
     "react-redux": "^5.0.6",
     "react-router": "^3.0.2",
@@ -72,7 +72,7 @@
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
-    "rollbar-browser": "^1.9.4",
+    "rollbar": "^2.3.1",
     "screenfull": "^3.0.0",
     "shutterbug": "^1.0.0",
     "three": "^0.87.1",
