--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
-  "presets": ["es2015", "react", "stage-2"],
-  "plugins": ["transform-runtime"]
+  "presets": [
+    ["@babel/preset-env", { "useBuiltIns": "usage" }],
+    "@babel/preset-react"
+  ],
+  "plugins": []
 }
