--- a/package.json
+++ b/package.json
@@ -29,46 +29,44 @@
   },
   "homepage": "https://github.com/concord-consortium/seismic-explorer#readme",
   "devDependencies": {
-    "babel-core": "^6.6.4",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "brfs": "^1.4.3",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^0.23.1",
-    "file-loader": "^1.1.11",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.1.0",
+    "babel-loader": "^8.0.5",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
     "imports-loader": "^0.8.0",
-    "json-loader": "^0.5.4",
-    "less": "^3.8.1",
+    "json-loader": "^0.5.7",
+    "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "raw-loader": "^0.5.1",
-    "standard": "^10.0.2",
-    "style-loader": "^0.13.0",
+    "standard": "^12.0.1",
+    "style-loader": "^0.23.1",
     "transform-loader": "^0.2.3",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.14"
+    "url-loader": "^1.1.2",
+    "wait-on": "^3.2.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.6.1",
-    "bootstrap": "^3.3.6",
-    "font-awesome": "^4.5.0",
+    "@babel/polyfill": "^7.2.5",
+    "font-awesome": "^4.7.0",
     "iframe-phone": "^1.1.3",
-    "immutable": "^3.7.6",
+    "immutable": "^3.8.2",
     "jquery": "^3.3.1",
-    "leaflet": "^1.3.1",
-    "leaflet-plugins": "^3.0.1",
+    "leaflet": "^1.4.0",
+    "leaflet-plugins": "^3.0.3",
     "leaflet-rotatedmarker": "^0.2.0",
-    "prop-types": "^15.5.10",
+    "prop-types": "^15.7.2",
     "rainbowvis.js": "^1.0.1",
-    "rc-slider": "^8.3.1",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-leaflet": "^1.9.1",
+    "rc-slider": "^8.6.6",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-leaflet": "^2.2.1",
     "react-modal": "^3.5.1",
     "react-redux": "^5.0.6",
     "react-router": "^3.0.2",
@@ -76,8 +74,8 @@
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
-    "rollbar": "^2.3.1",
-    "screenfull": "^4.0.0",
+    "rollbar": "^2.5.2",
+    "screenfull": "^4.0.1",
     "shutterbug": "^1.0.0",
     "three": "^0.87.1",
     "tween.js": "^16.3.4"
