--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ dist
 .idea
 .DS_Store
 cypress/screenshots
-cypress/snapshots/gpu-dependant/*/__diff_output__
+cypress/snapshots-diff
 .snapshot-report
 coverage
 
