--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,33 @@
 language: node_js
 node_js:
-  - 6
+  - 10
+cache:
+  directories:
+    - node_modules
 install:
-  - travis_retry npm install
-  - travis_retry gem install s3_website -v 2.12.3
-before_script:
+  - travis_retry npm ci
+  - travis_retry gem install s3_website -v 3.1.0
+script:
+  - npm run lint:test && npm test
+  - npm run start & wait-on http://localhost:8080
+  - npm run test:cypress:basic
   - 'CURRENT_TAG=`git describe --tags --exact-match $TRAVIS_COMMIT 2> /dev/null`;
      if [ "$TRAVIS_BRANCH" = "production" ] || [ "$TRAVIS_BRANCH" = "$CURRENT_TAG" ]; then
        npm run build-production;
      else
        npm run build;
      fi'
-script: deploy/s3_deploy.sh
-cache:
-  directories:
-    - node_modules
+after_script:
+  # If there are no errors, these dirs won't be created and Travis will complain about it while uploading artifacts.
+  - mkdir -p ./cypress/screenshots
+  - mkdir -p ./cypress/snapshots-diff
+after_success:
+  - deploy/s3_deploy.sh
+
+addons:
+  artifacts:
+    paths:
+      - ./cypress/screenshots
+      - ./cypress/snapshots-diff
+    target_paths:
+      - /seismic-explorer/build-artifacts/$TRAVIS_BUILD_NUMBER/$TRAVIS_JOB_NUMBER
