--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@svgr/webpack": "^4.3.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
@@ -84,7 +85,7 @@
     "font-awesome": "^4.7.0",
     "iframe-phone": "^1.1.3",
     "immutable": "^3.8.2",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "leaflet": "^1.4.0",
     "leaflet-plugins": "^3.0.3",
     "leaflet-rotatedmarker": "^0.2.0",
