--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "@material-ui/core": "^4.1.2",
+    "@material-ui/icons": "^4.2.1",
     "font-awesome": "^4.7.0",
     "iframe-phone": "^1.1.3",
     "immutable": "^3.8.2",
