--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "reselect": "^4.0.0",
     "rollbar": "^2.5.2",
     "screenfull": "^4.0.1",
-    "shutterbug": "^1.0.0",
+    "shutterbug": "1.3.0-pre.1",
     "three": "^0.102.0",
     "tween.js": "^16.6.0"
   }
