--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/checkout@v1
       - uses: cypress-io/github-action@v2
         with:
+          browser: electron
+          headless: true
           start: npm start
           wait-on: 'http://localhost:8080'
   s3-deploy:
