--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v1
       - uses: cypress-io/github-action@v2
         with:
-          browser: electron
+          browser: chrome
           headless: true
           start: npm start
           wait-on: 'http://localhost:8080'
