--- a/s3_website.yml
+++ b/s3_website.yml
@@ -5,14 +5,14 @@ s3_key_prefix: seismic-explorer
 s3_endpoint: us-east-1
 gzip: true
 
-<% if ENV['TRAVIS_BRANCH'] == 'production' %>
+<% if ENV['BRANCH_OR_TAG'] == 'production' %>
 # in this case we are going to deploy this branch to the top level of the domain
 # so we need to ignore the version and branch folders
 ignore_on_server: ^seismic-explorer/(version/|branch/)
 <% else %>
 # in this case we are going to deploy this code to a subfolder of either the branch
 # or version folder. So ignore everything except this folder.
-ignore_on_server: ^(?!seismic-explorer/<%= Regexp.escape(ENV['DEPLOY_DIR']) %>/)
+ignore_on_server: ^(?!seismic-explorer/<%= Regexp.escape(ENV['DEPLOY_DIR_NAME']) %>/)
 <% end %>
 max_age:
   "seismic-explorer/*": 600 # 10 minutes
