--- a/s3_website.yml
+++ b/s3_website.yml
@@ -12,7 +12,7 @@ ignore_on_server: ^seismic-explorer/(version/|branch/)
 <% else %>
 # in this case we are going to deploy this code to a subfolder of either the branch
 # or version folder. So ignore everything except this folder.
-ignore_on_server: ^(?!seismic-explorer/<%= Regexp.escape(ENV['DEPLOY_DIR_NAME']) %>/)
+ignore_on_server: ^(?!seismic-explorer/<%= Regexp.escape(ENV['S3_DEPLOY_DIR']) %>/)
 <% end %>
 max_age:
   "seismic-explorer/*": 600 # 10 minutes
