--- a/s3_website.yml
+++ b/s3_website.yml
@@ -1,20 +1,26 @@
 s3_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
 s3_secret: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
 s3_bucket: models-resources
-s3_key_prefix: seismic-explorer
+s3_key_prefix: <%= ENV['PROJECT_NAME'] %>
 s3_endpoint: us-east-1
 gzip: true
+
+cloudfront_distribution_id: <%= ENV['DISTRIBUTION_ID'] %>
+cloudfront_invalidate_root: true
+cloudfront_wildcard_invalidation: true
 
 <% if ENV['BRANCH_OR_TAG'] == 'production' %>
 # in this case we are going to deploy this branch to the top level of the domain
 # so we need to ignore the version and branch folders
-ignore_on_server: ^seismic-explorer/(version/|branch/)
-<% else %>
-# in this case we are going to deploy this code to a subfolder of either the branch
-# or version folder. So ignore everything except this folder.
-ignore_on_server: ^(?!seismic-explorer/<%= Regexp.escape(ENV['S3_DEPLOY_DIR']) %>/)
-<% end %>
+ignore_on_server: <%= ENV['IGNORE_ON_SERVER'] %>
 max_age:
-  "seismic-explorer/*": 600 # 10 minutes
-  "seismic-explorer/version/*": 31536000 # 1 year
-  "seismic-explorer/branch/*": 0
+  "<%= ENV['PROJECT_NAME'] %>/*": 600 # 10 minutes
+  "<%= ENV['PROJECT_NAME'] %>/version/*": 31536000 # 1 year
+  "<%= ENV['PROJECT_NAME'] %>/branch/*": 0
+
+
+cloudfront_distribution_config:
+  aliases:
+    quantity: 1
+    items:
+      - <%= ENV['DISTRIBUTION_DOMAIN'] %>
