--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - name: Install Dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
       - name: Build
         run: npm run build
       - name: Run Tests
@@ -42,9 +42,9 @@ jobs:
       - name: Install Dependencies
         run: |
           gem install s3_website -v 3.4.0
-          npm ci
+          npm ci --legacy-peer-deps
       - name: Build
-        run: npm run build
+        run: npm run build-production
       - name: Deploy
         run: ./s3_deploy.sh
         env:
