--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,29 +28,30 @@ jobs:
           browser: chrome
           start: npm start
           wait-on: 'http://localhost:8080'
-  s3-deploy:
+  s3-deploy2:
     name: S3 Deploy
     needs:
       - build_test
       - cypress
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: Setup Ruby 2.4
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '2.4'
       - name: Install Dependencies
-        run: |
-          gem install s3_website -v 3.4.0
-          npm ci --legacy-peer-deps
-      - name: Build
-        run: npm run build-production
-      - name: Deploy
-        run: ./s3_deploy.sh
+        run: npm ci --legacy-peer-deps
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          # skip installing cypress since it isn't needed for just building
+          # This decreases the deploy time quite a bit
+          CYPRESS_INSTALL_BINARY: 0
+      - uses: concord-consortium/s3-deploy-action@v1
+        with:
+          bucket: models-resources
+          prefix: seismic-explorer
+          awsAccessKeyId: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          awsSecretAccessKey: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          # Parameters to GHActions have to be strings, so a regular yaml array cannot
+          # be used. Instead the `|` turns the following lines into a string
+          topBranches: |
+            ["master"]
