--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "cypress-image-snapshot": "^3.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
+    "html-webpack-plugin": "^5.5.3",
     "imports-loader": "^4.0.1",
     "jest": "^24.1.0",
     "json-loader": "^0.5.7",
