--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
           CYPRESS_INSTALL_BINARY: 0
       - uses: concord-consortium/s3-deploy-action@v1
         with:
+          build: npm run build-production
           bucket: models-resources
           prefix: seismic-explorer
           awsAccessKeyId: ${{ secrets.AWS_ACCESS_KEY_ID }}
